# sdl-study

./: .gitignore  CMakeLists.txt  README.md
Pong/: Makefile-mac  Makefile-win  README.md  main.c
SDLShooter/: .gitignore  CMakeLists.txt  README.md  SDLShooter-Darwin  boilerplate.cpp  main.cpp
SDLShooter/src/: Game.cpp  Game.h  Object.h  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
Setup/: mac.md  windows-gcc.md
_notes/: collision-detection.md  game-tree.md  model-design.md  path-finding.md  process-input.md  state-machine.md
c-sdl-make-boilerplate/: Makefile  sdl-demo.c
cpp-sdl-make-boilerplate/: Makefile  sdl-demo.c
cpp-sdl-study/: CMakeLists.txt
cpp-sdl-study/src/: img_test.cpp
